Fix mobile menu toggle and footer structure

--- a/style.css
+++ b/style.css
@@ -474,7 +474,7 @@ textarea{resize:vertical}
 
 .aboutCard__img{
   height: 290px;
-   background: url("image/ardc.png") ;
+   background: url("image/ardic_logo_page_1.jpg") ;
 
   background-size: cover;
   background-position: center;
